primer commit en rama_dos

--- a/estilaso.css
+++ b/estilaso.css
@@ -1,5 +1,10 @@
 *{margin:0;
 padding: 0;}
+@import url ('https://fonts.googleapis.com/css2?family=Roboto:wght@100& display = swap'); 
+
+body{
+    font-family: "Roboto", sans-serif;
+}
 
 h1{
     color: grey;
@@ -7,4 +12,11 @@ h1{
 
 h2{
     color: indianred;
+}
+
+.caja{
+    width: 100%;
+    background-color:rgb(187, 187, 250);
+    
+
 }
